# Intercession

./: .gitignore  .gitmodules  CMakeLists.txt  EIDOLON.exe - Shortcut.lnk  INTERCESSION.exe - Release.lnk  INTERCESSION.exe - Shortcut.lnk  INTERCESSION_CLIENT.exe - Debug.lnk  INTERCESSION_CLIENT.exe - Release.lnk  INTERCESSION_SERVER.exe - Debug.lnk  INTERCESSION_SERVER.exe - Release.lnk  License.md  Notes.md  README.md  imgui.ini
source/: CMakeLists.txt  animation.h  animator.h  assimp_glm_convertors.h  body.h  bone.h  build_config.h.in  camera_manager.h  client_main.cpp  collective_entity.h  collider.h  cube_2_mesh.h  cube_2_vertex_group.h  cube_body.h  cube_entity.h  cube_mesh.h  cube_model.h  cube_vertex_group.h  entity.h  main.cpp  mesh.h  model.h  plane_mesh.h  plane_vertex_group.h  quad_body.h  quad_entity.h  quad_model.h  screen_plane_vertex_group.h  server_main.cpp  shader_manager.h  shader_manifest.h  skybox_vertex_group.h  source_files.cmake  test.cpp  test.h  test_main.cpp  vertex_group.h
source/behaviors/: behaviors_component.h  behaviors_dynamo.cpp  behaviors_dynamo.h  behaviors_library.cpp  behaviors_library.h  behaviors_packet.h  behaviors_synchro.cpp  behaviors_synchro.h  biped_behaviors.h  biped_component.h  fly_control_behaviors.h  i_behaviors_drivetrain.cpp  i_behaviors_drivetrain.h  lakitu_behaviors.h  oscillator_behaviors.h  oscillator_component.h  osrs_camera_behaviors.h  projectile_behaviors.h  projectile_component.h
source/client/: client_app_gateway.cpp  client_app_gateway.h  client_cosmos_context.cpp  client_cosmos_context.h  client_model_cache.cpp  client_network_api.h  client_network_dynamo.cpp  client_network_dynamo.h  intercession_client.h
source/controlling/: a_control_component.h  a_control_relay.h  basic_biped_control_relay.h  biped3p_camera_control_relay.h  biped_control_component.h  biped_control_packet.h  biped_control_synchro.cpp  biped_control_synchro.h  camera_control_component.h  camera_control_packet.h  camera_control_synchro.cpp  camera_control_synchro.h  control_component.h  control_dynamo.cpp  control_dynamo.h  control_packet.h  control_synchro.cpp  control_synchro.h  fly_control_relay.h  i_control_component.h  i_control_relay.h  input_buffer.h  physics_control_component.h  physics_control_packet.h  physics_control_synchro.cpp  physics_control_synchro.h  sotc_camera_control_relay.h  spacial_input_buffer.h
source/core/: a_dynamo.h  app_gateway.cpp  app_gateway.h  cosmos.cpp  cosmos.h  cosmos_access_packet.h  cosmos_builder.cpp  cosmos_builder.h  cosmos_context.cpp  cosmos_context.h  dynamo_cluster.h  i_app_gateway.cpp  i_app_gateway.h  i_cosmos_context.cpp  i_cosmos_context.h  i_dynamo.cpp  i_dynamo.h  meta_component.h
source/ecs/: README.md  component_array.h  component_registry.h  ecs_types.h  entity_registry.h  i_component_array.h  i_synchro.h  stator.h  synchro_registry.h  tag_component.h
source/events/: event.cpp  event.h  event_broker.cpp  event_broker.h  event_types.h  message.h  message_conduit.h
source/input/: input_dynamo.cpp  input_dynamo.h
source/inputting/: a_input_relay.h  input_dynamo.cpp  input_dynamo.h  raw_input_buffer.h  spacial_input_component.h  spacial_input_packet.h  spacial_input_relay.h  spacial_input_synchro.cpp  spacial_input_synchro.h
source/libraries/: CMakeLists.txt
source/logging/: pleep_log.h  pleep_logger.cpp  pleep_logger.h
source/networking/: Readme.md  a_network_relay.h  entity_timestream_map.h  i_network_dynamo.h  net_connection.h  net_i_client.h  net_i_server.h  net_message.h  network_dynamo.cpp  network_dynamo.h  network_synchro.cpp  network_synchro.h  pleep_crypto.h  pleep_net.cpp  pleep_net.h  spacetime_component.h  timeline_api.cpp  timeline_api.h  timeline_config.h  timeline_types.h  ts_breakpoint_queue.h  ts_deque.h  ts_queue.h
source/old/: bone.h  camera_manager.h  cube_model.h  cube_smooth_vertex_group.h  cube_vertex_group.h  entity.h  mesh.h  model.h  plane_vertex_group.h  shader_manager.h  skybox_vertex_group.h
source/parallel/: parallel_cosmos_context.cpp  parallel_cosmos_context.h
source/physics/: a_physics_relay.h  box_collider.h  box_collider_component.cpp  box_collider_component.h  box_collider_synchro.cpp  box_collider_synchro.h  collider.h  collider_component.h  collider_packet.h  collider_synchro.cpp  collider_synchro.h  collision_physics_relay.h  collision_procedures.cpp  collision_procedures.h  euler_physics_relay.h  i_collider.h  i_collider_component.h  i_physics_relay.h  i_physics_response_component.h  physics_component.h  physics_dynamo.cpp  physics_dynamo.h  physics_packet.h  physics_synchro.cpp  physics_synchro.h  ray_collider_component.cpp  ray_collider_component.h  ray_collider_synchro.cpp  ray_collider_synchro.h  rigid_body_component.cpp  rigid_body_component.h  spring_body_component.cpp  spring_body_component.h  transform_component.h  verlet_physics_relay.h
source/rendering/: a_render_relay.h  animation_component.h  animation_packet.h  animation_relay.h  animation_skeletal.h  animation_synchro.cpp  animation_synchro.h  armature.h  armature_component.h  assimp_converters.h  assimp_glm_convertors.h  bloom_render_relay.h  bone.h  camera_component.h  camera_packet.h  cube_model.h  debug_render_packet.h  forward_render_relay.h  i_render_relay.h  light_packet.h  light_source_component.h  light_source_packet.h  lighting_synchro.cpp  lighting_synchro.h  material.h  mesh.cpp  mesh.h  model.cpp  model.h  model_builder.cpp  model_builder.h  model_cache.h  model_component.h  model_library.cpp  model_library.h  model_library_types.h  model_manager.cpp  model_manager.h  model_manager_faux.cpp  model_manager_faux.h  (+13 more)
source/scripting/: biped_component.h  biped_scripts.h  fly_control_script.h  fly_control_scripts.h  i_script_drivetrain.cpp  i_script_drivetrain.h  lakitu_scripts.h  oscillator_scripts.h  script_component.h  script_dynamo.cpp  script_dynamo.h  script_library.cpp  script_library.h  script_packet.h  script_synchro.cpp  script_synchro.h
source/server/: intercession_server.h  server_app_gateway.cpp  server_app_gateway.h  server_cosmos_context.cpp  (+6 more)
(+132 files in other folders)
